[package]
name = "trouble-rp23-examples"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
embassy-executor = { version = "0.9", default-features = false, features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5", default-features = false, features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.8", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-futures = "0.1.2"
embassy-sync = { version = "0.7", features = ["defmt"] }

futures = { version = "0.3", default-features = false, features = ["async-await"]}
trouble-example-apps= { version = "0.1.0", path = "../apps", features = ["defmt"] }
trouble-host = { path = "../../host", features = ["default-packet-pool-mtu-128"] }
cyw43 = { version = "0.5", features = ["defmt", "firmware-logs", "bluetooth"] }
cyw43-pio = { version = "0.8", features = ["defmt"] }

defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }

cortex-m = { version = "0.7" }
cortex-m-rt = "0.7"
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
rand_core = { version = "0.6"}
rand_chacha = { version = "0.3", default-features = false }

[build-dependencies]
reqwest = { version = "0.12.9", features = ["blocking"]}

[features]
skip-cyw43-firmware = []

[profile.release]
debug = 2

[patch.crates-io]
#embassy-executor = {path = "../../../embassy/embassy-executor"}
#embassy-sync = {path = "../../../embassy/embassy-sync"}
#embassy-futures = {path = "../../../embassy/embassy-futures"}
#embassy-time = {path = "../../../embassy/embassy-time"}
cyw43 = { git = "https://github.com/embassy-rs/embassy.git", rev = "faacad613ea26a28de216cf32ac4cc64f7862d4c" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "faacad613ea26a28de216cf32ac4cc64f7862d4c" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "faacad613ea26a28de216cf32ac4cc64f7862d4c" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "faacad613ea26a28de216cf32ac4cc64f7862d4c" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", rev = "faacad613ea26a28de216cf32ac4cc64f7862d4c" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy.git", rev = "faacad613ea26a28de216cf32ac4cc64f7862d4c" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "faacad613ea26a28de216cf32ac4cc64f7862d4c" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "faacad613ea26a28de216cf32ac4cc64f7862d4c" }
