[package]
name = "serial-hci"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10.0"
log = "0.4"
embedded-io-adapters = { version = "0.6.1", features = ["tokio-1"] }
embassy-sync = { version = "0.7", features = ["log"] }
#?embassy-time = { version = "0.5", features = ["log", "std", "generic-queue-8"] }
#?critical-section = { version = "1.1", features = ["std"] }
rand = { version = "0.10.0-rc.5", default-features = false, features = ["os_rng"], optional = true }
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
trouble-example-apps = { version = "0.1.0", path = "../apps", features = ["log", "std"] }
trouble-host = { path = "../../host" }

[features]
security = [
    "trouble-example-apps/security",
    "dep:rand"
]

[[bin]]
name = "ble_bas_central_sec"
required-features = ["security"]

[[bin]]
name = "ble_bas_peripheral_sec"
required-features = ["security"]
