[package]
edition = "2024"
name = "trouble-stm32wb-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
embassy-stm32 = { version = "0.6.0", features = [ "defmt", "time-driver-any", "memory-x", "exti" ]  }
embassy-stm32-wpan = { version = "0.1.0", features = ["defmt", "bt-hci", "wba-ble" ] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-executor = { version = "0.10.0", features = ["defmt", "platform-cortex-m", "executor-thread" ] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-net = { version = "0.9.1", features = ["defmt", "udp", "proto-ipv6", "medium-ieee802154", ], optional = true }
trouble-example-apps = { version = "0.1.0", path = "../apps", features = ["defmt"] }
trouble-host = { path = "../../host", features = ["default-packet-pool-mtu-255"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.9", default-features = false }
static_cell = "2"

[features]
default = ["stm32wba65ri"]
stm32wba65ri = [ "embassy-stm32-wpan/stm32wba65ri", "embassy-stm32-wpan/ble-stack-llo", "embassy-stm32-wpan/linklayer6-ble-basic" ]

[[bin]] 
name = "ble_blas_peripheral"

[patch.crates-io]
embassy-stm32 = { version = "0.6.0", git = "https://github.com/embassy-rs/embassy.git", rev = "89394e4"}
embassy-stm32-wpan = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", rev = "89394e4"}
embassy-sync = { version = "0.8.0", git = "https://github.com/embassy-rs/embassy.git", rev = "89394e4"}
embassy-executor = { version = "0.10.0", git = "https://github.com/embassy-rs/embassy.git", rev = "89394e4"}
embassy-time = { version = "0.5.1", git = "https://github.com/embassy-rs/embassy.git", rev = "89394e4"}
embassy-net = { version = "0.9.1", git = "https://github.com/embassy-rs/embassy.git", rev = "89394e4"}