[package]
name = "trouble-example-tests"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
trouble-host = { path = "../../host", features = ["derive", "log"] }
bt-hci = { version = "0.6" }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
serde_json = "1"
log = "0.4"
tokio = { version = "1", default-features = false, features = [
  "time",
  "rt-multi-thread",
  "macros",
  "process"
] }
pretty_env_logger = "0.5.0"
reqwest = "0.12"
hilbench-agent = "0.1.0"
embedded-io-adapters = { version = "0.6.1", features = ["tokio-1"] }
embedded-io-async = { version = "0.6.1" }
embedded-io = { version = "0.6.1" }
critical-section = { version = "1", features = ["std"] }
embassy-sync = "0.7"
tokio-serial = "5.4"
tokio-util = "0.7"
rand = "0.8.5"
heapless = "0.9"
anyhow = "1"
tempfile = "3.15"

[patch.crates-io]
hilbench-agent = { git = "https://github.com/lulf/hilbench.git", rev = "700693cec2f813967f6717341296828d4c2971ae" }
